package com.covoiturage.model.enums; public enum NotifType {NEW_MESSAGE,POST_RESPONSE}
