package com.covoiturage.model.enums; public enum PostStatus {ACTIVE,FULL,CANCELLED,COMPLETED}
