package com.covoiturage.model.enums; public enum PostType {OFFER,REQUEST}
