package com.covoiturage.model.enums; public enum Role {USER,ADMIN}
